# AugmentedReality

./: .gitignore  README.md
Project/: CMakeLists.txt  main.cpp
Project/bounce/: ball.cpp
Project/bounce/headers/: application.h  ball.h  ball_dynamics.h  drawing.h  grid.h  scene.h  scene_object.h
Project/bounce/source/: application.cpp  ball.cpp  ball_dynamics.cpp  drawing.cpp  grid.cpp  scene.cpp
Project/data_models/: consts.h  digit.cpp
Project/drawing/: draw_primitives.h  draw_snowman.h
Project/mnist_loader/: data_loader.cpp  data_loader.h
Project/neural_net_opencv/: network.h
Project/neural_net_plain/headers/: neural_network.h  sandwicher.h  solver.h
Project/neural_net_plain/source/: neural_network.cpp  neutral_network.cpp  sandwicher.cpp  solver.cpp
Project/neutral_net/headers/: data_loader.h  neutral_network.h  sandwicher.h  solver.h
Project/neutral_net/source/: data_loader.cpp  neutral_network.cpp  sandwicher.cpp  solver.cpp
Project/neutral_net_opencv/: network.h
Project/neutral_net_plain/headers/: neutral_network.h  solver.h
Project/neutral_net_plain/source/: neutral_network.cpp  solver.cpp
Project/resources/: CameraMatrix
Project/tracker/headers/: PoseEstimation.h  camera.h  tracker.h
Project/tracker/source/: PoseEstimation.cpp  camera.cpp  tracker.cpp
Tracker/: CMakeLists.txt  Tracker.sln  main.cpp
Tracker/Tracker/: Tracker.vcxproj  main.cpp
Tracker/data/: line.h  subpoint.cpp  subpoint.h
Tracker/headers/: camera.h  detector.h  edgeDetector.h  poseEstimation.h  transformations.h
Tracker/source/: camera.cpp  edgeDetector.cpp  poseEstimation.cpp  transformations.cpp
